Bug 1090906, no context menu when pointer is locked, r=masayuki